--- a/ReactPeople.Web/appsettings.json
+++ b/ReactPeople.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConStr": "Data Source=.\\sqlexpress;Initial Catalog=ReactPeopleBackend;Integrated Security=true;"
+  }
 }
